Fixed spacing on gameboard

--- a/connections-clone/src/styles.css
+++ b/connections-clone/src/styles.css
@@ -12,6 +12,50 @@
     min-height: 100vh;
 }
 
+.found-grid {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+}
+
+    .found-grid.addBottomMargin {
+        margin-bottom: 10px;
+    }
+
+.category {
+    height: 100px;
+    width: 100%;
+    border: 2px solid #444444;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+    border-radius: 10px;
+    color: #f0f0f0;
+}
+
+    .category.group0 {
+        background-color: #ffb852;
+        color: #1a1a1a;
+    }
+
+    .category.group1 {
+        background-color: #bfb48f;
+        color: #1a1a1a;
+    }
+
+    .category.group2 {
+        background-color: #beb8e6;
+        color: #1a1a1a;
+    }
+
+    .category.group3 {
+        background-color: #008aa1;
+        color: #1a1a1a;
+    }
+
 .word-grid {
     width: 100%;
     max-width: 600px;
@@ -21,13 +65,7 @@
     gap: 10px;
 }
 
-.found-grid {
-    width: 100%;
-    max-width: 600px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-}
+
 
 @keyframes shake {
     0% {
@@ -85,38 +123,6 @@
         color: #333333;
         border-color: #333333;
         animation: shake 0.5s;
-    }
-
-.category {
-    margin-bottom: 10px;
-    height: 100px;
-    width: 100%;
-    border: 2px solid #444444;
-    text-align: center;
-    cursor: pointer;
-    transition: background-color 0.3s, border-color 0.3s;
-    border-radius: 10px;
-    color: #f0f0f0;
-}
-
-    .category.group0 {
-        background-color: #ffb852;
-        color: #1a1a1a;
-    }
-
-    .category.group1 {
-        background-color: #bfb48f;
-        color: #1a1a1a;
-    }
-
-    .category.group2 {
-        background-color: #beb8e6;
-        color: #1a1a1a;
-    }
-
-    .category.group3 {
-        background-color: #008aa1;
-        color: #1a1a1a;
     }
 
 .selected-words {
